Added api route convert in swagger docs
